--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,1 +1,17 @@
-<div> Hello Home </div>
+<div class="home__container">
+    <div class="home__container__header">
+        <img src="../../../img/webpack-icon.png" alt="webpack" class="home__container__header__image">
+    </div>
+
+    <div class="home__container__content">
+        <span class="home__container__content__item">
+            This is the home page for my widgets, code snippets and general playground
+        </span>
+        <span class="home__container__content__item">
+            Using ES6, AngularJS, Webpack and Node
+        </span>
+        <span class="home__container__content__item">
+            Author: Brian Clarke
+        </span>
+    </div>
+</div>
