--- a/src/app/navigation/navigation.scss
+++ b/src/app/navigation/navigation.scss
@@ -2,7 +2,7 @@
   display: flex;
   width: 180px;
   height: 600px;
-  border: 1px solid red;
+  background-color: #888888;
 
   &__list {
     list-style-type: none;
@@ -11,9 +11,11 @@
     &__item {
 
       &__button {
-        width: 180px;
+        width: 140px;
         height: 30px;
-        margin-bottom: 15px;
+        margin: 10px 20px 10px 20px;
+        font-size: 14px;
+        background-color: deepskyblue;
 
       }
     }
