Added box upload page

--- a/src/app/navigation/navigation.html
+++ b/src/app/navigation/navigation.html
@@ -7,6 +7,12 @@
         </li>
 
         <li class="app__nav__list__item">
+            <button class="app__nav__list__item__button" ng-click="$ctrl.goToBox()">
+                <span>Box Upload</span>
+            </button>
+        </li>
+
+        <li class="app__nav__list__item">
             <button class="app__nav__list__item__button" ng-click="$ctrl.goToPage2()">
                 <span>Page 2</span>
             </button>
