--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,6 +1,8 @@
 <div class="home__container">
     <div class="home__container__header">
-        <img src="../../../img/webpack-icon.png" alt="webpack" class="home__container__header__image">
+        <img src="../../../img/angular-icon.png" alt="angular icon" class="home__container__header__image">
+        <img src="../../../img/webpack-icon.png" alt="webpack icon" class="home__container__header__image">
+        <img src="../../../img/nodejs-icon.png" alt="nodejs icon" class="home__container__header__image">
     </div>
 
     <div class="home__container__content">
