--- a/src/app/pages/box/box.scss
+++ b/src/app/pages/box/box.scss
@@ -1,4 +1,4 @@
-.home__container {
+.box__container {
   display: flex;
   align-content: center;
   flex-wrap: wrap;
@@ -7,8 +7,8 @@
   &__header {
     width: 100%;
     display: flex;
-    margin-left: 220px;
-    margin-right: 220px;
+    margin-left: 300px;
+    margin-right: 300px;
 
     &__image {
       margin-top: 50px;
@@ -19,16 +19,24 @@
 
   &__content {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-wrap: wrap;
     margin-top: 50px;
 
-    &__item {
+    &__row {
       width: 100%;
-      margin-top: 30px;
-      text-align: center;
-      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      margin-top: 20px;
+      margin-left: 50px;
+    }
+
+    &__input {
+      width: 300px;
+      height: 30px;
+      font-size: 14px;
+      padding-left: 20px;
     }
   }
 
 }
+
