--- a/src/app/pages/box/box.scss
+++ b/src/app/pages/box/box.scss
@@ -30,11 +30,12 @@
       margin-left: 50px;
     }
 
-    &__input {
-      width: 300px;
+    &__button {
+      width: 200px;
       height: 30px;
       font-size: 14px;
       padding-left: 20px;
+      margin-right: 20px;
     }
   }
 
