--- a/src/app/navigation/navigation.html
+++ b/src/app/navigation/navigation.html
@@ -1,20 +1,8 @@
 <div class="app__nav">
     <ul class="app__nav__list">
-        <li class="app__nav__list__item">
-            <button class="app__nav__list__item__button" ng-click="$ctrl.goToHome()">
-                <span>Home</span>
-            </button>
-        </li>
-
-        <li class="app__nav__list__item">
-            <button class="app__nav__list__item__button" ng-click="$ctrl.goToBox()">
-                <span>Box Upload</span>
-            </button>
-        </li>
-
-        <li class="app__nav__list__item">
-            <button class="app__nav__list__item__button" ng-click="$ctrl.goToPage2()">
-                <span>Page 2</span>
+        <li class="app__nav__list__item" ng-repeat="link in $ctrl.links">
+            <button class="app__nav__list__item__button" ng-click="$ctrl.goTo(link.state)">
+                <span>{{link.label}}</span>
             </button>
         </li>
     </ul>
