--- a/src/app/core/widgets/autocomplete-dropdown/autocomplete-dropdown.html
+++ b/src/app/core/widgets/autocomplete-dropdown/autocomplete-dropdown.html
@@ -7,8 +7,7 @@
            placeholder="{{$ctrl.placeholder}}"
            ng-model="$ctrl.model"
            ng-blur="$ctrl.handleBlur()"
-           ng-focus="$ctrl.handleFocus()"
-           ng-paste="$event.preventDefault()"/>
+           ng-focus="$ctrl.handleFocus()"/>
 
     <div class="input">
         <autocomplete-results
