--- a/src/app/pages/widget-page/widget-page.scss
+++ b/src/app/pages/widget-page/widget-page.scss
@@ -21,7 +21,20 @@
       font-size: 14px;
       color: #0074D9;
     }
+  }
 
+  &__date-formatter {
+    margin: 50px 0 0 50px;
+
+    &__label {
+      margin-bottom: 10px;
+      padding-left: 10px;
+      font-family: Helvetica, Arial, sans-serif;
+    }
+
+    &__date {
+      padding-left: 8px;
+    }
   }
 }
 
